# intmax3-zkp

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  build-wallet-wasm.sh  index.html  intmax3-channel-spec 2.md  package-lock.json  package.json  rust-toolchain.toml  test-worker.js  wallet-e2e.js  wallet-feasibility.html  wallet-live-debug.js  wallet-live-smoke.js  wallet-live.html  wallet-relay-ec2.js  wallet-relay.js  wallet-worker.js  wallet.html  webdriver.json
.cargo/: config.toml
.claude/plans/: whir-constraint-check.md
api/: API-DESIGN.md  package-lock.json  package.json  server.js
api/lib/: cli.js  lock.js  security.js  tickets.js
api/routes/: blocks.js  burn.js  channel-init.js  channel-send.js  channel-state.js  channels.js  close.js  deposit.js  full-withdrawal.js  inter-channel.js  keys.js  partial-withdrawal.js  settlement.js  tickets.js
architecture-audit/: ChannelSafety.lean  ChannelSafety2.lean  ChannelSafety21.lean  abstract.md  abstract2-1.md  abstract2.md  detail2-implementation-notes.md  detail2.md  lean-safety-proof.md  lean-safety-proof2.md  partial-withdrawal-HANDOFF.md  partial-withdrawal-impl-plan.md
audit/: audit02-07-2026.md  audit28-06-2026.md  audit622.md
audit/zkp/: README.md  SUMMARY.md  Zkp.lean  lakefile.toml
benches/: degree_report.rs  proof_bench.rs
contracts/: .env.example  .gitignore  foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol  DeployC2C.s.sol  DeployClose.s.sol  DeployCloseCli.s.sol  DeployPartialWithdrawalE2E.s.sol  DeployTestnetBlockProducer.s.sol  DeployWalletSettlement.s.sol  Finalize.s.sol  FixtureLib.sol  RunC2C.s.sol  RunClose.s.sol  SubmitPartialWithdrawal.s.sol
contracts/src/: BlobKZGVerifier.sol  ChannelSettlementManager.sol  ChannelSettlementVerifier.sol  GnarkGroth16Verifier.sol  Groth16Verifier.sol  IForcedTxLogic.sol  IntmaxRollup.sol  PaymentChannelLogic.sol  Plonky2Verifier.sol  PoseidonGateEval.sol
contracts/test/: C2CBlockHash.t.sol  C2CFullE2E.t.sol  ChannelSettlementAdversarial.t.sol  ChannelSettlementInvariant.t.sol  ChannelSettlementLiveness.t.sol  ChannelSettlementManager.t.sol  CloseE2EBase.sol  CloseLifecycleE2E.t.sol  CloseManagerAddr.t.sol  CloseSettlementBase.sol  CloseTestLib.sol  E2E_RealGroth16.t.sol  IntmaxRollup.t.sol  MleE2E.t.sol  MleFinalizeE2E.t.sol  PartialWithdrawal.t.sol  Plonky2Verifier.t.sol  PoseidonGateEval.t.sol  PostCloseClaimRealProof.t.sol  ReclaimStake.t.sol  SpongefishWhir.t.sol  WhirOnchainE2E.t.sol  WithdrawNativeE2E.t.sol  WithdrawalClaimRealProof.t.sol
doc/architecture-audit/: ChannelSafety.lean  ChannelSafety2.lean  ChannelSafety21.lean  abstract.md  abstract2-1.md  abstract2.md  bridge-to-2.md  detail2-implementation-notes.md  detail2.md  lakefile.lean  lean-safety-proof21.md  partial-withdrawal-HANDOFF.md  partial-withdrawal-impl-plan.md
doc/audit/: audit02-07-2026.md  audit28-06-2026.md  audit622.md
doc/benches/: degree_report.rs
doc/docs/: deploy-runbook.md  gnark-fraud-proof-spec.md  poseidon-sig-entropy.md  regev-noise-analysis.md  sepolia-smoke-runbook.md  spec.md
doc/tasks/: a3-close-lifecycle-followup.md  a3-close-lifecycle-spec.md  a3-impl-todo.md  a3-p4-withdraw-handoff.md  a3-p4-withdraw-plan.md  a3-p5-plus-plan.md  a3-p6a-stub-revert-plan.md  archive-two-layer-identity-todo.md  audit-fixes-todo.md  channel-key-tree-design.md  channel-key-tree-mvp.md  close-verifier-a1-todo.md  decryption-subphase-design.md  delegate-account-threat-model.md  h1-poseidon-root-threat-model.md  inter-channel-live.md  lessons.md  phase-b-claims-threat-model.md  phase-c-challenge-stubs-threat-model.md  phase1-distinctness-linearization.md  phase2-max-bump.md  poseidon-signature-threat-model.md  poseidon-signature-todo.md  pw-settle-ec2-plan.md  reg-chain-1024-threat-model.md  regen-and-redeploy-runbook.md  todo.md  wallet-threat-model.md  withdraw-audit-findings.md
docs/: deploy-runbook.md  forced-tx-queue.md  gnark-fraud-proof-spec.md  intmax3-channel-mvp.md  plonky3-migration.md  poseidon-sig-entropy.md  sepolia-smoke-runbook.md  signature-aggregation.md  spec.md
docs/archive/: intmax3-hub-channel-spec.md
gnark/: .gitignore  go.mod  go.sum  main.go
hosting/: Dockerfile.signer  build-wallet-wasm.sh  index.html  pnpm-lock.yaml  server.js
node/: .gitignore  DESIGN.md  README.md  config.example.json  package-lock.json  package.json
src/: constants.rs  lib.rs  plonky3_backend.rs  wallet_core.rs  wasm_demo.rs  wasm_wallet.rs
tasks/: a3-close-lifecycle-followup.md  a3-close-lifecycle-spec.md  a3-impl-todo.md  a3-p4-withdraw-handoff.md  a3-p4-withdraw-plan.md  a3-p5-plus-plan.md  a3-p6a-stub-revert-plan.md  a30-a34-wiring-todo.md  adversarial-test-session-2026-06-22.md  archive-two-layer-identity-todo.md  audit-fixes-todo.md  balance-audit-findings.md  channel-key-tree-design.md  channel-key-tree-mvp.md  close-verifier-a1-plan.md  h1-poseidon-root-threat-model.md  inter-channel-live.md  lessons.md  phase-b-claims-threat-model.md  poseidon-signature-threat-model.md  poseidon-signature-todo.md  reclaim-stake-threat-model.md  reg-chain-1024-restructure.md  reg-chain-1024-threat-model.md  stage3-postclose-anchoring-threat-model.md  todo.md  wallet-lessons.md  wallet-threat-model.md  withdraw-audit-findings.md
tests/: batch_cosign_e2e.rs  c16_demo_deposit_fold_mismatch.rs  channel_backing_e2e.rs  close_lifecycle_cli_e2e.rs  deposit_nullifier_canonicality.rs  e2e.rs  inter_channel_cli.rs  inter_channel_e2e.rs  inter_channel_live.rs  inter_channel_unified_e2e.rs  inter_channel_validity_b2.rs  mle_onchain_e2e.rs  nullifier_duplicate_insertion_poc.rs  onchain_deposit_keystone.rs  partial_withdrawal_e2e.rs  partial_withdrawal_exclusivity.rs  regev_timing.rs  small_block_sig_validity.rs  sphincs_timing.rs  verify_wasm_proof.rs  wallet_core_e2e.rs  wallet_delegate_demo.rs  wasm_proofs.rs  whir_onchain_e2e.rs  withdrawal_nullifier_canonicality.rs
tools/lattice-proof-helper/: Cargo.toml
tools/lattice-proof-helper/src/: main.rs
wallet/: wallet-e2e.js  wallet-live.html  wallet-relay-ec2.js  wallet-relay.js  wallet-worker.js
(+369 files in other folders)
