[package]
name = "intmax3-zkp"
version = "0.1.0"
edition = "2024"

# Explicit single-member workspace root with resolver "2". `exclude` keeps the
# nested `contracts/lib/polygon-plonky2` workspace (and `vendor/`) as their own
# workspaces so their `{ workspace = true }` dependency inheritance still
# resolves, while pinning OUR resolver to "2" (edition 2024 would otherwise
# default to "3") to avoid the plonky2-vs-plonky2 "output filename collision"
# that breaks transitive sibling-crate resolution (E0463 on plonky2_keccak)
# for integration-test targets on macOS.
[workspace]
resolver = "2"
exclude = ["contracts/lib/polygon-plonky2", "vendor", "gnark"]

[lib]
# `cdylib` is only required at WASM build time (wasm-pack flow). For native
# test / bin builds, the historical "output filename collision" → E0463 issue
# is now fully resolved by the `[workspace]` resolver pin above PLUS dropping
# `cdylib` from the submodule's `plonky2` crate-type (see SETUP note in
# architecture-audit/detail2-implementation-notes.md). Keeping the lib `rlib`-
# only here remains correct; WASM builds append `cdylib` at wasm-pack invocation
# time, e.g. via `--crate-type=cdylib`.
crate-type = ["rlib"]

[dependencies]
# polygon-plonky2 main (≥ PR #11 wasm-webgpu-merkle merge `940ce731`, currently
# pinned to `d67ab49e`) carries both the MLE PCS and the WASM/WebGPU Merkle
# port. The local submodule under contracts/lib/polygon-plonky2 is the source
# of truth; the [patch] block below redirects all transitive `polygon-plonky2.git`
# refs (regardless of branch label) to the submodule path so everything in the
# workspace resolves to the same code.
plonky2 = { git = "https://github.com/InternetMaximalism/polygon-plonky2.git", branch = "main", default-features = false, features = [
    "parallel",
    "std",
] }
starky = { git = "https://github.com/InternetMaximalism/polygon-plonky2.git", package = "starky", branch = "main", default-features = false, features = [
    "parallel",
    "std",
] }
plonky2_mle = { git = "https://github.com/InternetMaximalism/polygon-plonky2.git", branch = "main" }
# Sibling crates on the `wasm-main` branch (Result-returning
# PartialWitness::set_target, matches polygon-plonky2 main HEAD incl. PR #11
# wasm-webgpu-merkle).
#
# REPRODUCIBILITY (#14): these stay on `branch` DELIBERATELY. `plonky2_bn254` and
# `plonky2_keccak` depend on `plonky2_u32` via `branch = "wasm-main"` in THEIR own
# manifests; pinning our direct dep to `rev` makes Cargo see `?rev=…` and
# `?branch=…#…` as two distinct sources and duplicates `plonky2_u32` (crate-collision
# / E0463, the exact hazard the [workspace] note above fights). The reproducibility
# anchor is therefore `Cargo.lock`, which pins the EXACT commits
# (u32 d0b3bfd…, bn254 18044f3…, keccak 2507786…). Release/CI builds MUST pass
# `--locked` (or `--frozen`) so the pin is enforced and `cargo update` cannot drift.
plonky2_u32 = { git = "https://github.com/InternetMaximalism/plonky2-u32.git", branch = "wasm-main", default-features = false }
plonky2_bn254 = { git = "https://github.com/InternetMaximalism/plonky2_bn254", branch = "wasm-main", default-features = false }
plonky2_keccak = { git = "https://github.com/InternetMaximalism/plonky2_keccak", branch = "wasm-main", default-features = false }

keccak-hash = "0.8.0"
hex = "0.4.3"
rand = "0.8.5"
rand09 = { package = "rand", version = "0.9.4" }
thiserror = "2.0.17"
num-bigint = "0.4.6"
num = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1.0.145"
log = "0.4.28"
ff = { package = "ff", version = "0.13", features = ["derive"] }
anyhow = "1.0.100"
lazy_static = "1.5.0"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
# Regev (Ring-LWE) lattice layer — rides the Plonky3 0.5.3 graph, which
# coexists with the 0.4.2 graph below (semver-incompatible majors resolve
# side by side). Pinned to the same rev the SIS-lattice-paymentchannel port
# source uses. `default-features = false` drops `parallel` for wasm safety;
# enable the `regev-parallel` feature for native proving speed.
regev_plonky3 = { git = "https://github.com/leohio/regv-plonky3.git", rev = "3b17b8e", default-features = false }
rand010 = { package = "rand", version = "0.10" }
p3-air-05 = { package = "p3-air", version = "0.5.3" }
p3-field-05 = { package = "p3-field", version = "0.5.3" }
p3-matrix-05 = { package = "p3-matrix", version = "0.5.3" }
p3-baby-bear = "0.5.3"
p3-batch-stark = "0.5.3"
p3-lookup = "0.5.3"
# Upstream Poseidon2 AIR (round constraints) + the 0.5.3 symmetric `Permutation` trait, for the
# P3 native BabyBear hash-signature (`src/regev/hash_sig.rs`). Same 0.5.3 family as the regev path.
p3-poseidon2-air = "0.5.3"
p3-symmetric-05 = { package = "p3-symmetric", version = "0.5.3" }
# Plonky3 / uni-stark
p3-air = "0.4.2"
p3-challenger = "0.4.2"
p3-commit = "0.4.2"
p3-dft = "0.4.2"
p3-field = "0.4.2"
p3-fri = "0.4.2"
p3-goldilocks = "0.4.2"
p3-matrix = "0.4.2"
p3-merkle-tree = "0.4.2"
p3-maybe-rayon = "0.4.2"
p3-poseidon2 = "0.4.2"
p3-symmetric = "0.4.2"
p3-uni-stark = "0.4.2"

# Threading
rayon = "1.8"
wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Web APIs
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
js-sys = "0.3"

# Error handling
console_error_panic_hook = "0.1.7"

# Random numbers (WASM-compatible)
getrandom = { version = "0.3", features = ["wasm_js"] }

# Async support
futures = "0.3"

# Timing (WASM-compatible)
web-time = "0.2"

# `rand` 0.10 (alias `rand010`, used by the Regev layer) pulls getrandom 0.4, whose wasm
# support is a Cargo *feature* (`wasm_js`) rather than the `getrandom_backend="wasm_js"` cfg
# that getrandom 0.3 above uses. Enabling the feature here makes getrandom 0.4 select its
# `wasm_js` backend on wasm32 (otherwise `inner_u32`/`inner_u64` are undefined and the link
# fails). Renamed to avoid colliding with the getrandom 0.3 dep; we never import it directly —
# this edge exists only to unify the `wasm_js` feature onto the getrandom 0.4 in the graph.
# wasm-only so native builds are unaffected.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_v04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[features]
default = []
# Diagnostic-only WASM exports that must NOT ship in the production wallet build.
# Currently gates `wallet_feasibility_check` (a Phase-0 probe that proves at the
# WEAK `RegevSecurityLevel::Test` level). Off by default so the shipped wallet
# surface never exposes a Test-level prover; build the diagnostic page with
# `--features diagnostics`.
diagnostics = []
# Legacy plonky2 balance-processor browser demo (`src/wasm_demo.rs`). Off by default because the
# module is stale on this branch (removed `*_async` APIs, missing generated fixtures). See lib.rs.
legacy_wasm_demo = []
# `plonky2_keccak/wasm` does not expose a `gpu_merkle` feature flag, so we only
# forward it to plonky2 + starky (which do).
gpu_merkle = ["plonky2/gpu_merkle", "starky/gpu_merkle"]
# Rayon-parallel Regev STARK proving (native only; do not enable for wasm).
regev-parallel = ["regev_plonky3/parallel"]
# Un-gates the SHARED close-circuit witness builders (`close_circuit::test_fixture`) for the
# `generate_close_fixture` binary WITHOUT pulling them into normal `cargo build`. The builders are
# otherwise `#[cfg(test)]`-only; this flag adds them to the non-test build so the fixture generator
# proves the SAME closable state the in-tree close-circuit tests exercise (single canonical copy).
close-fixture-bin = []
# Phase B-D: un-gates the shared withdrawal-claim / post-close-claim circuit witness builders
# (`*::test_fixture`) for their fixture-generator binaries WITHOUT pulling them into normal
# `cargo build`. Same pattern as `close-fixture-bin`: the builders are otherwise `#[cfg(test)]`-only.
withdrawal-claim-fixture-bin = []
post-close-claim-fixture-bin = []
# Phase C1: un-gates the cancel-close circuit witness builders (`cancel_close_circuit::test_fixture`)
# for its fixture-generator binary WITHOUT pulling them into normal `cargo build`. Same pattern as
# the other fixture features.
cancel-close-fixture-bin = []

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
once_cell = "1.20"
wasm-bindgen-test = "0.3"

# The close-intent MLE fixture generator depends on the feature-gated shared close-circuit witness
# builders, so it is only built when `close-fixture-bin` is enabled. Declaring it explicitly (with
# `required-features`) keeps `cargo build` / `cargo check` green by default — autobins would
# otherwise try to compile it unconditionally and fail on the gated `test_fixture` import.
[[bin]]
name = "generate_close_fixture"
path = "src/bin/generate_close_fixture.rs"
required-features = ["close-fixture-bin"]

[[bin]]
name = "generate_withdrawal_claim_fixture"
path = "src/bin/generate_withdrawal_claim_fixture.rs"
required-features = ["withdrawal-claim-fixture-bin"]

[[bin]]
name = "generate_post_close_claim_fixture"
path = "src/bin/generate_post_close_claim_fixture.rs"
required-features = ["post-close-claim-fixture-bin"]

[[bin]]
name = "generate_cancel_close_fixture"
path = "src/bin/generate_cancel_close_fixture.rs"
required-features = ["cancel-close-fixture-bin"]

[[bench]]
name = "proof_bench"
harness = false
# benches live under doc/benches/ (not the default benches/), so the path is explicit.
path = "doc/benches/proof_bench.rs"

[[bench]]
name = "degree_report"
harness = false
path = "doc/benches/degree_report.rs"

# Pin all transitive polygon-plonky2 deps to the local submodule. The
# submodule is updated to a post-PR#11 commit so it carries: (a) MLE PCS with
# the v2 soundness fixes (R2-#1 gate binding, R2-#2 logUp), and (b) the
# WebGPU Merkle accelerator (`gpu_merkle` feature). All sibling crates
# (`plonky2_u32` / `plonky2_bn254` / `plonky2_keccak`)
# transitively reference `polygon-plonky2.git` and are redirected here too.
[patch."https://github.com/InternetMaximalism/polygon-plonky2.git"]
plonky2 = { path = "contracts/lib/polygon-plonky2/plonky2" }
plonky2_field = { path = "contracts/lib/polygon-plonky2/field" }
plonky2_util = { path = "contracts/lib/polygon-plonky2/util" }
plonky2_maybe_rayon = { path = "contracts/lib/polygon-plonky2/maybe_rayon" }
plonky2_mle = { path = "contracts/lib/polygon-plonky2/mle" }
starky = { path = "contracts/lib/polygon-plonky2/starky" }

[patch.crates-io]
p3-merkle-tree = { path = "vendor/plonky3/p3-merkle-tree" }
p3-fri = { path = "vendor/plonky3/p3-fri" }
p3-uni-stark = { path = "vendor/plonky3/p3-uni-stark" }
# Second-version patches for the Plonky3 0.5.3 graph (regev_plonky3). These are
# MSRV-downgrade fixes for the pinned nightly-2025-03-23 toolchain, reused from
# the (now retired) external lattice-proof-helper setup.
p3-field-0503 = { path = "vendor/p3-field-0.5.3", package = "p3-field" }
p3-fri-0503 = { path = "vendor/p3-fri-0.5.3", package = "p3-fri" }
p3-merkle-tree-0503 = { path = "vendor/p3-merkle-tree-0.5.3", package = "p3-merkle-tree" }
p3-uni-stark-0503 = { path = "vendor/p3-uni-stark-0.5.3", package = "p3-uni-stark" }
# Vendored p3-poseidon2-air 0.5.3 with a VISIBILITY-ONLY change (`pub(crate) fn eval`
# -> `pub fn eval`, see vendor/p3-poseidon2-air-0.5.3/src/air.rs). This exposes the
# upstream whole-permutation constraint evaluator so the P3-3 hash-sig wrapper AIR
# (a wider `[Poseidon2Cols | binding_cols]` row) can invoke it on the Poseidon2Cols
# prefix and add cross-row binding constraints. NO constraint logic is changed; the
# audited round-constraint body is byte-for-byte upstream.
p3-poseidon2-air-0503 = { path = "vendor/p3-poseidon2-air-0.5.3", package = "p3-poseidon2-air" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"  # Use "abort" for production (smaller binary), "unwind" for debugging

# `cargo test --release --tests` builds the integration test harnesses with the
# `release` profile. `wasm_bindgen_futures` and a few other WASM-side deps in
# the workspace require `panic = "abort"`, so we force test builds to abort too
# (otherwise we hit "requires panic strategy abort which is incompatible with
# unwind"). Backtraces are unaffected at the test binary level.
[profile.test]
panic = "abort"

[profile.bench]
panic = "abort"

# Post-build WASM binary optimization pass (runs after compilation)
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",                  # Most aggressive optimization (smaller + faster WASM)
    "--enable-bulk-memory",  # Bulk memory ops for faster memcpy/memset
    "--enable-simd"          # SIMD instructions for parallel 128-bit math
]
