[package]
name = "lattice-proof-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sis_amount_stark = { path = "../../vendor/sis_amount_stark" }

[patch.crates-io]
p3-field = { path = "../../vendor/p3-field-0.5.3" }
p3-fri = { path = "../../vendor/p3-fri-0.5.3" }
p3-merkle-tree = { path = "../../vendor/p3-merkle-tree-0.5.3" }
p3-uni-stark = { path = "../../vendor/p3-uni-stark-0.5.3" }
